subiendo mi nuevo Portafolio

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -8,6 +8,8 @@
 }
 
 .nav{
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
     height: var(--header-height);
     display: flex;
     justify-content: space-between;
